terraform/config.tf
# ----------------------------------------
# Create a ecs service using fargate
# https://github.com/telia-oss/terraform-aws-ecs-fargate/blob/master/examples/default/example.tf
# ----------------------------------------

provider "aws" {
  region = "eu-west-1"
}

resource "aws_ecs_cluster" "cluster" {
  name = "example-ecs-cluster"
}

data "aws_vpc" "main" {
  default = true
}

data "aws_subnet_ids" "main" {
  vpc_id = "${data.aws_vpc.main.id}"
}

module "fargate_alb" {
 source  = "telia-oss/loadbalancer/aws"
 version = "0.1.0"

 name_prefix = "example-ecs-cluster"
 type        = "application"
 internal    = "false"
 vpc_id      = "${data.aws_vpc.main.id}"
 subnet_ids  = ["${data.aws_subnet_ids.main.ids}"]

 tags {
   environment = "test"
   terraform   = "true"
 }
}

resource "aws_lb_listener" "alb" {
  load_balancer_arn = "${module.fargate_alb.arn}"
  port              = "80"
  protocol          = "HTTP"

  default_action {
    target_group_arn = "${module.fargate.target_group_arn}"
    type             = "forward"
  }
}

resource "aws_security_group_rule" "task_ingress_8000" {
 security_group_id        = "${module.fargate.service_sg_id}"
 type                     = "ingress"
 protocol                 = "tcp"
 from_port                = "8000"
 to_port                  = "8000"
 source_security_group_id = "${module.fargate_alb.security_group_id}"
}

resource "aws_security_group_rule" "alb_ingress_80" {
 security_group_id = "${module.fargate_alb.security_group_id}"
 type              = "ingress"
 protocol          = "tcp"
 from_port         = "80"
 to_port           = "80"
 cidr_blocks       = ["0.0.0.0/0"]
 ipv6_cidr_blocks  = ["::/0"]
}

module "fargate" {
  source = "github.com/telia-oss/terraform-aws-ecs-fargate"

  name_prefix          = "example-app"
  vpc_id               = "${data.aws_vpc.main.id}"
  private_subnet_ids   = "${data.aws_subnet_ids.main.ids}"
  cluster_id           = "${aws_ecs_cluster.cluster.id}"
  task_container_image = "crccheck/hello-world:latest"

  // public ip is needed for default vpc, default is false
  task_container_assign_public_ip = "true"

  // port, default protocol is HTTP
  task_container_port = "8000"

  health_check {
    port = "traffic-port"
    path = "/"
  }

#  tags {
#    environment = "test"
#    terraform   = "true"
#  }

  lb_arn = "${module.fargate_alb.arn}"
}
